# pydantic-ai-bdi

./: .env-example  .gitignore  BENCHMARKING.md  INSTALLATION.md  LICENSE  Pipfile  README.md  bdi.py  bdi_agent_log.md  cfg.md  cli.py  litellm_proxy.py  main.py  pyproject.toml  roadmap.md  schemas.py  toy.py  toy_herokuapp.py
.codesight/: CODESIGHT.md  config.md  coverage.md  graph.md  libs.md  middleware.md
.codesight/.codesight/: CODESIGHT.md  middleware.md
.github/workflows/: ci.yml  publish.yml  release.yml
.prd/: bdi-plan-intention-refactor.md  sbench-toy-cli-runner.md
.prd/issues/: 001-batch-belief-updates.md  002-plan-backed-intention-execution.md  003-single-active-intention-deliberation.md  004-conservative-plan-reconsideration.md  005-plan-repair-preserves-commitment.md  006-hitl-uses-plan-interface.md  007-bdi-lifecycle-regression-coverage.md  008-no-argument-sbench-toy-runner-compatibility.md  009-cli-task-selection-and-validation.md  010-configured-scoped-bdi-task-execution.md  011-structured-summaries-and-failure-continuation.md
antigravity/: __init__.py  auth.py  constants.py  model.py  provider.py  transform.py
bdi/: __init__.py  agent.py  bdi.py  belief_updates.py  cycle.py  errors.py  execution.py  hitl.py  io_helpers.py  logging.py  monitoring.py  planning.py  prompts.py  schemas.py  state_transitions.py  usage.py
bdi/schemas/: __init__.py  belief_schemas.py  desire_schemas.py  hitl_schemas.py  intention_schemas.py  plan_schemas.py  reconsider_schemas.py
benchmarks/: .gitignore  README.md  USAGE_GUIDE.md  install-benchmarks.sh  requirements.txt
benchmarks/agents/: __init__.py  base_agent.py  bdi_agent.py  crewai_agent.py  langgraph_agent.py
benchmarks/evaluation/: __init__.py  runner.py
benchmarks/experiments/: README.md  __init__.py  base_experiment.py  run_experiments.py
benchmarks/metrics/: __init__.py  analyzer.py  collector.py  usage_tracker.py
benchmarks/scripts/: __init__.py  analyze_results.py  combine_results.py  run_full_study.sh  usability_report.py  visualize_results.py
benchmarks/tasks/: __init__.py  complex_tasks.py  medium_tasks.py  setup_teardown.py  simple_tasks.py  task_schema.py  validators.py
benchmarks/usability/: __init__.py  ease_of_use.py
codex/: __init__.py  auth.py  constants.py  model.py  provider.py
docs/: cfg.md  detailed-cfg.md  user-flow.md
frontend/: .env-example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  types.ts
frontend/src/: App.tsx  api.ts  env.d.ts  main.tsx  mockBackend.ts  style.css
runners/: __init__.py  bdi.py
sbench_toy/: config.py  tools.py
scripts/: release.py
server/: __init__.py  agent_manager.py  app.py
server/agents/: brief_parser.py  general.py
tests/: test_litellm_proxy.py  test_public_api.py  test_release.py  test_shared_runner.py  test_toy_runner.py
tests/bdi/: conftest.py  test_belief_schemas.py  test_belief_updates.py  test_cycle.py  test_execution.py  test_hitl_actions.py  test_lifecycle_regressions.py  test_monitoring.py  test_planning.py  test_retry_belief_extraction.py  test_schema_defaults.py  test_state_transitions.py  test_structured_logging.py  test_transitions.py  test_usage.py
tests/voluntas/: conftest.py  test_belief_schemas.py  test_belief_updates.py  test_cycle.py  test_execution.py  test_hitl_actions.py  test_lifecycle_regressions.py  test_monitoring.py  test_planning.py  test_retry_belief_extraction.py  test_schema_defaults.py  test_state_transitions.py  test_streaming_run.py  test_structured_logging.py  test_transitions.py  test_usage.py
the-agent-company/: README.md  run_tac_bdi.py
theagentcompany/: README.md  admin-arrange-meeting-rooms.json  progress_report.py  run_tac_bdi.py  tac-state-complete.json  tac-state.json  tac-tasks-complete.md  tac-tasks.md
theagentcompany/tac-structured-logs/: admin-arrange-meeting-rooms.json  admin-ask-for-meeting-feedback.json  admin-ask-for-upgrade-reimbursement.json  admin-check-employees-budget-and-reply-2.json  admin-check-employees-budget-and-reply-and-record.json  admin-employee-info-reconciliation.json  admin-get-best-vendor-quote.json  admin-make-spreadsheet.json  admin-mass-forms-filling.json  admin-read-survey-and-summarise.json  admin-remove-pages-pdf.json  (+18 more)
voluntas/: __init__.py  _utils.py  agent.py  belief_updates.py  cycle.py  execution.py  hitl.py  logging.py  monitoring.py  planning.py  prompts.py  state_transitions.py
(+40 files in other folders)
