[project]
name = "bdi-agent"
version = "0.1.0"
description = "A BDI (Belief-Desire-Intention) agent framework built on Pydantic AI"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "pydantic-ai",
    "chardet",
    "python-dotenv",
    "psutil>=5.9.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
start = "cli:start"
cli = "cli:start"
benchmark-run = "benchmarks.evaluation.runner:main"
experiment-run = "benchmarks.experiments.run_experiments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bdi", "helper"]
