[project]
name = "voluntas"
version = "0.1.0"
description = "A BDI (Belief-Desire-Intention) agent framework built on Pydantic AI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Douglas Chalegre", email = "douglas.chalegre@gmail.com" }]
requires-python = ">=3.10,<3.14"
keywords = ["bdi", "agents", "pydantic-ai", "llm", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic-ai>=1.41,<1.42",
]

[project.urls]
Homepage = "https://github.com/douglaschalegre/voluntas"
Repository = "https://github.com/douglaschalegre/voluntas"
Issues = "https://github.com/douglaschalegre/voluntas/issues"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voluntas"]

[tool.hatch.build.targets.sdist]
include = [
    "/voluntas",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "--cov=voluntas --cov-branch --cov-report=term --cov-report=html"
